objects/nFORCE__Content__mdt.object
<CustomObject>
    <fields>
        <fullName>nFORCE__Feature_Name__c</fullName>
        <description>Temporary field used to associate the content with the feature</description>
        <label>-D Feature Name</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Feature__c</fullName>
        <description>Lookup to the feature related to this content</description>
        <label>Feature</label>
        <referenceTo>nFORCE__Feature__mdt</referenceTo>
        <relationshipLabel>Contents</relationshipLabel>
        <relationshipName>Contents</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>nFORCE__Has_Resource__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to determine if this content record has resources. The additional resource should be a static resource that is named to match the pattern MetdataType_DeveloperName</description>
        <label>Has_Resource</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nFORCE__Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Used to determine if this content record is currently active</description>
        <label>Is_Active</label>
        <type>Checkbox</type>
    </fields>
    <label>Content</label>
    <pluralLabel>Contents</pluralLabel>
</CustomObject>